<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estadistica"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoDia"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="37dp" />
    <TextView
        android:id="@+id/textSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoSemana"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="37dp" />
    <TextView
        android:id="@+id/textProgreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porgreso"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="37dp" />
</LinearLayout>